[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "site-sentry"
version = "0.1.0"
description = "Automated QA suite for kyledarden.com built with Playwright + Pytest"
readme = "README.md"
license = "MIT"
authors = ["Kyle Darden <kyle@kyledarden.com>"]
packages = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = ">=3.12"
pytest = ">=8.0.0"
pytest-playwright = ">=0.5.0"
playwright = ">=1.40.0"
python-dotenv = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
pytest-html = ">=4.1.1"
pytest-xdist = ">=3.5.0"
ruff = ">=0.5.0"
mypy = ">=1.9.0"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--html=test-results/report.html",
    "--self-contained-html",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "smoke: Quick smoke tests that verify core functionality",
    "ui: UI interaction and navigation tests",
    "slow: Tests that take longer to run",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
